--- a/src/main/resources/Templates/Parent/addParentForm.html
+++ b/src/main/resources/Templates/Parent/addParentForm.html
@@ -5,8 +5,6 @@
     <title>Add Parent</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/JavaScript/function.js"></script>
-    <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -18,127 +16,15 @@
                     <span th:text="${Error}"></span>
                 </div>
                 <h3>Add Parent</h3>
-                <!-- User name -->
-                <div class="form-floating mb-1 mt-3">
-                    <input type="text" th:field="*{username}" name="username" placeholder="Input Parent username (*)"
-                           id="usernameid" class="form-control" required/>
-                    <label class="form-label" for="usernameid">User name: </label>
-                    <div th:if="${#fields.hasErrors('username')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('username')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-floating mb-1">
-                    <input type="password" th:field="*{password}" name="password" placeholder="Input Parent Password"
-                           id="password" class="form-control" required/>
-                    <label class="form-label" for="password">Password: </label>
-                    <div th:if="${#fields.hasErrors('password')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('password')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- input the correct attribute name of the entity-->
-                <div class="form-floating mb-1">
-                    <input type="text" th:field="*{firstName}" name="firstname" required
-                           placeholder="Input Teacher FirstName" id="firstname" class="form-control"/>
-                    <label class="form-label" for="firstname">First Name: </label>
-                    <div th:if="${#fields.hasErrors('firstName')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('firstName')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-1">
-                    <input type="text" th:field="*{lastName}" name="lastname" placeholder="Input Parent LastName"
-                           id="lastname" class="form-control" required/>
-                    <label class="form-label" for="lastname">Last Name: </label>
-                    <div th:if="${#fields.hasErrors('lastName')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('lastName')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-1">
-                    <input type="text" th:field="*{address}" name="address" placeholder="Input Parent Address"
-                           id="address" class="form-control" required/>
-                    <label class="form-label" for="address">Address: </label>
-                    <div th:if="${#fields.hasErrors('address')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('address')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="mb-1">
-                    <label for="school_select" class="form-label">School Select: </label>
-                        <select id="school_select" th:field="*{school}" required>
-                            <option value="0">--Select School--</option>
-                            <option th:each="school : ${schoolList}" th:value="${school.id}"
-                                    th:text="${school.name} +' ('+${school.level}+')'"></option>
-                        </select>
-                    <div th:if="${#fields.hasErrors('school')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="mb-1">
-                    <label for="class_select" class="form-label">Class: </label>
-                    <select id="class_select" required>
-                        <option value="0">--Select Class--</option>
-                    </select>
-                </div>
-
-                <div class="mb-1">
-                    <label class="form-label">Student: </label>
-                    <select id="student_select" th:field="*{student}" required>
-                        <option value="0">--Select Student--</option>
-                    </select>
-                    <div th:if="${#fields.hasErrors('student')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('student')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-1">
-                    <input type="tel" th:field="*{phoneNumber}" name="phoneNumber" placeholder="Input Parent Phone"
-                           id="phoneNumber" class="form-control" required/>
-                    <label class="form-label" for="phoneNumber">PhoneNumber: </label>
-                    <div th:if="${#fields.hasErrors('phoneNumber')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('phoneNumber')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="form-floating mb-1">
-                    <input type="text" th:field="*{identity}" name="identity" placeholder="Input Parent identity"
-                           id="identity" class="form-control" required/>
-                    <label class="form-label" for="identity">Identity: </label>
-                    <div th:if="${#fields.hasErrors('identity')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('identity')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="form-floating mb-1">
-                    <input type="email" th:field="*{email}" placeholder="Input Parent Email" name="email" id="email"
-                           class="form-control" required/>
-                    <label class="form-label" for="email">Email: </label>
-                    <div th:if="${#fields.hasErrors('email')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('email')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
+                <!-- START Fragment/UsernamePassword-->
+                <div th:replace="~{Fragment/UsernamePassword :: fragmentUsernamePassword}"></div>
+                <!-- END Fragment/UsernamePassword-->
+                <!-- START Fragment/CommonFieldInputUser-->
+                <div th:replace="~{Fragment/CommonFieldInputUser :: fragmentCommonFieldInput}"></div>
+                <!-- END Fragment/CommonFieldInputUser-->
+                <!-- START Fragment Add - Modify Parent-->
+                <div th:replace="~{Fragment/Parent :: fragmentParentAdd-Modify}"></div>
+                <!-- END Fragment Add - Modify Parent-->
                 <button class="btn btn-primary py-2" type="submit">Add</button>
             </form>
         </div>
@@ -253,8 +139,9 @@
         });
     });
 </script>
-<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+<script src="/JavaScript/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
