--- a/src/main/resources/Templates/Parent/modifyParent.html
+++ b/src/main/resources/Templates/Parent/modifyParent.html
@@ -2,135 +2,41 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Modify Teacher</title>
+    <title>Modify Parent</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/JavaScript/function.js"></script>
-    <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-<h1>Modify Parent</h1>
-<div>
+<div class="container">
+    <h1>Modify Parent</h1>
     <form th:action="@{/m-parent/modify-process}" th:object="${parent}" method="post">
-        <div th:if="${Error}" class="alert alert-danger">
-            <span th:text="${Error}"></span>
-        </div>
         <div>
-            <label th:field="*{id}" for="parentid">Parent Id: </label>
+            <div th:if="${Error}" class="alert alert-danger">
+                <span th:text="${Error}"></span>
+            </div>
+            <div th:if="${success}">
+                <h3>You updated a parent "<span th:text="${success}"></span> ",</h3>
+            </div>
+        </div>
+        <div class="form-outline mb-1">
+            <label class="form-label" for="parentid">Parent Id: <span th:text="*{id}"></span></label>
             <input type="hidden" th:field="*{id}" name="parentid" id="parentid">
-            <div th:if="${#fields.hasErrors('id')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('id')}" th:text="${Error}"></li>
-                </ul>
-            </div>
         </div>
-        <div>
-            <label for="teacherFirstName">Parent First Name: </label>
-            <input type="text" th:field="*{firstName}" placeholder="Input First Name parent"
-                   name="teacherFirstName" id="teacherFirstName">
-            <div th:if="${#fields.hasErrors('firstName')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('firstName')}" th:text="${Error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="teacherLastName">Parent Last Name: </label>
-            <input type="text" th:field="*{lastName}" placeholder="Input Last Name parent"
-                   name="teacherLastName" id="teacherLastName">
-            <div th:if="${#fields.hasErrors('lastName')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('lastName')}" th:text="${Error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="teacherAddress">Parent Address: </label>
-            <input type="text" th:field="*{address}" placeholder="Input address parent"
-                   name="teacherAdress" id="teacherAddress">
-            <div th:if="${#fields.hasErrors('address')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('address')}" th:text="${Error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="teacherPhone">Parent Phone: </label>
-            <input type="tel" th:field="*{phoneNumber}" placeholder="Input phone parent"
-                   name="teacherPhone" id="teacherPhone">
-            <div th:if="${#fields.hasErrors('phoneNumber')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('phoneNumber')}" th:text="${Error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="form-floating mb-1">
-            <input type="text" th:field="*{identity}" name="identity" placeholder="Input Parent identity"
-                   id="identity" class="form-control" required/>
-            <label class="form-label" for="identity">Identity: </label>
-            <div th:if="${#fields.hasErrors('identity')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('identity')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="mb-1">
-            <label class="form-label">School: </label>
-            <select id="school_select" th:field="*{school}" required>
-            <option value="0">--Select School--</option>
-            <option th:each="school : ${schoolList}" th:value="${school.id}"
-                    th:text="${school.name} +' ('+${school.level}+')'"></option>
-            </select>
-            <div th:if="${#fields.hasErrors('school')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="mb-1">
-            <label class="form-label">Class: </label>
-            <select id="class_select" required>
-                <option value="0">--Select Class--</option>
-            </select>
-        </div>
-
-        <div class="mb-1">
-            <label class="form-label">Student: </label>
-            <select id="student_select" th:field="*{student}" required>
-                <option value="0">--Select Student--</option>
-            </select>
-            <div th:if="${#fields.hasErrors('student')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('student')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div>
-            <label for="teacherEmail">Parent Mail: </label>
-            <input type="email" th:field="*{email}" placeholder="Input email student"
-                   name="teacherEmail" id="teacherEmail">
-            <div th:if="${#fields.hasErrors('email')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('email')}" th:text="${Error}"></li>
-                </ul>
-            </div>
-        </div>
+        <!-- START Fragment/CommonFieldInputUser-->
+        <div th:replace="~{Fragment/CommonFieldInputUser :: fragmentCommonFieldInput}"></div>
+        <!-- END Fragment/CommonFieldInputUser-->
+        <!-- START Fragment Add - Modify Parent-->
+        <div th:replace="~{Fragment/Parent :: fragmentParentAdd-Modify}"></div>
+        <!-- END Fragment Add - Modify Parent-->
         <div>
             <button class="btn btn-primary" type="submit">Modify</button>
         </div>
     </form>
-    <div th:if="${success}">
-        <h3>You updated a parent "<span th:text="${success}"></span> ",</h3>
+    <div>
+        <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
+        <a class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Parent List Manage</a>
     </div>
-</div>
-<div>
-    <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Parent List Manage</a>
 </div>
 </body>
 <script>
@@ -235,10 +141,8 @@
         });
     });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+<script src="/JavaScript/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </html>
