--- a/src/main/resources/Templates/School/NoteBook/modifyFormNotebook.html
+++ b/src/main/resources/Templates/School/NoteBook/modifyFormNotebook.html
@@ -5,8 +5,6 @@
     <title>Modify NoteBook</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/JavaScript/function.js"></script>
-    <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 <h1>Modify NoteBook</h1>
@@ -61,51 +59,8 @@
     <a class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook List Manage</a>
 </div>
 </body>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const schoolSelect = document.getElementById('school_select');
-        const classSelect = document.getElementById('class_select');
-
-        function getClassBySchool(schoolId) {
-            if (schoolId) {
-                fetch(`/m-note/getClassBySchool/${schoolId}`)
-                    .then(response => response.json())
-                    .then(classes => {
-                        // clear previous class
-                        classSelect.innerHTML = '<option value="0">--Select Class--</option>';
-
-                        // populate new class
-                        classes.forEach(classItem => {
-                            const option = document.createElement('option');
-                            option.value = classItem.id;
-                            option.textContent = classItem.name;
-                            classSelect.appendChild(option);
-                        });
-                    })
-                    .then(error => console.error('Error fetching class:', error));
-            } else {
-                // if no school selected
-                    classSelect.innerHTML = '<option value="0">--Select Class--</option>';
-            }
-        }
-
-        schoolSelect.addEventListener('change', function () {
-            const schoolId = schoolSelect.value;
-            getClassBySchool(schoolId);
-        });
-
-        // if school is selected
-        const schoolId = schoolSelect.value;
-        if (schoolId) {
-            getClassBySchool(schoolId);
-        }
-    });
-</script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+<script src="/JavaScript/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </html>
