--- a/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
@@ -5,8 +5,6 @@
     <title>Add Score Card</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/JavaScript/function.js"></script>
-    <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -128,136 +126,8 @@
     <a class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard List Manage</a>
 </div>
 </body>
-<script>
-    document.addEventListener('DOMContentLoaded', function(){
-        const schoolSelect = document.getElementById('school_select');
-        const classSelect = document.getElementById('class_select');
-        const studentSelect = document.getElementById('student_select');
-        const subjectSelect = document.getElementById('subject_select');
-
-        function getClassBySchool(schoolId){
-            if(schoolId){
-                fetch(`/m-class/getClassBySchoolId/${schoolId}`)
-                .then(response => response.json())
-                .then(classes => {
-                    // clear previous school
-                    classSelect.innerHTML = '<option value = "0">--Select Class--</option>';
-
-                    // populate new school
-                    classes.forEach(classItem => {
-                        const option = document.createElement('option');
-                        option.value = classItem.id;
-                        option.textContent = classItem.name;
-                        classSelect.appendChild(option);
-                    });
-                })
-                .catch(error => console.error('Error fetching Class:', error));
-            } else {
-                // if no school selected
-                classSelect.innerHTML = '<option value = "0">--Select Class--</option>';
-            }
-        }
-
-        function getStudentByClassAndSchool(schoolId, classId){
-            if(schoolId && classId){
-                fetch(`/m-student/getStudentByClassAndSchool/${schoolId}/${classId}`)
-                .then(response => response.json())
-                .then(students => {
-                    // clear previous student
-                    studentSelect.innerHTML='<option value="0">--Select Student--</option>';
-
-                    students.forEach(studentItem =>{
-                        const option = document.createElement('option');
-                        option.value = studentItem.id;
-                        option.textContent = `${studentItem.lastName} ${studentItem.firstName}`;
-                        studentSelect.appendChild(option); // Append the option to the select element
-                    });
-                })
-                .catch(error =>console.error('Error fetching Student:', error));
-            } else {
-                // if no class or school selected
-                studentSelect.innerHTML='<option value="0">--Select Student--</option>';
-            }
-        }
-
-        function getClassByStudentAndSchool(schoolId, studentId){
-            if(schoolId && studentId){
-                fetch(`/m-class/getClassByStudentAndSchool/${schoolId}/${studentId}`)
-                .then(response => response.json())
-                .then(classes => {
-                    // clear previous class
-                    classSelect.innerHTML='<option value ="0">--Select Class--</option>';
-
-                    // populate new class
-                    classes.forEach(classItem => {
-                        const option = document.createElement('option');
-                        option.value = classItem.id;
-                        option.textContent = classItem.name;
-                        classSelect.appendChild(option);
-                    });
-                })
-                .catch(error => console.error('Error fetching Class: ', error));
-            } else {
-                // if the student or school not select
-                classSelect.innerHTML='<option value ="0">--Select Class--</option>';
-            }
-        }
-
-        function getSubjectBySchool(schoolId){
-            if(schoolId){
-                fetch(`/m-subject/getSubjectBySchool/${schoolId}`)
-                .then(response => response.json())
-                .then(subjects =>{
-                    // clear previous subject
-                    subjectSelect.innerHTML ='<option value="0">--Select Subject--</option>';
-
-                    // populate new subject
-                    subjects.forEach(subjectItem => {
-                        const option = document.createElement('option');
-                        option.value = subjectItem.id;
-                        option.textContent = subjectItem.nameSubject;
-                        subjectSelect.appendChild(option);
-                    });
-                })
-                .catch(error => console.error('Error fetching Subject:', error));
-            } else {
-                // if no school selected
-                subjectSelect.innerHTML ='<option value="0">--Select Subject--</option>';
-            }
-        }
-
-        // if school and student selected
-        const schoolId = schoolSelect.value;
-        const studentId = studentSelect.value;
-        if(schoolId && studentId){
-            getClassByStudentAndSchool(schoolId, studentId);
-        }
-
-        // if school selected
-        if(schoolId){
-            getSubjectBySchool(schoolId);
-        }
-
-        // if school and class selected
-        const classId = classSelect.value;
-        if(schoolId && classId){
-            getStudentByClassAndSchool(schoolId, classId);
-        }
-
-        // event listener
-        schoolSelect.addEventListener('change', function(){
-            const schoolId = schoolSelect.value;
-            // get class
-            getClassBySchool(schoolId);
-            // get subject
-            getSubjectBySchool(schoolId);
-        });
-
-        classSelect.addEventListener('change', function(){
-            const schoolId = schoolSelect.value;
-            const classId = classSelect.value;
-            getStudentByClassAndSchool(schoolId, classId);
-        });
-    });
-</script>
+<script src="/JavaScript/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </html>
