--- a/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
@@ -5,8 +5,6 @@
     <title>Modify Score Card</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/JavaScript/function.js"></script>
-    <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -112,4 +110,8 @@
     <a class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">Score Card List Manage</a>
 </div>
 </body>
+<script src="/JavaScript/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </html>
