--- a/src/main/resources/Templates/Student/addStudentForm.html
+++ b/src/main/resources/Templates/Student/addStudentForm.html
@@ -5,230 +5,40 @@
     <title>Add Student</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/JavaScript/function.js"></script>
-    <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <form th:action="@{/m-student/add-process}" th:object="${student}" method="post">
-                <div th:if="${Error}" class="alert alert-danger">
-                    <span th:text="${Error}"></span>
-                </div>
-                <h3>Add Student</h3>
-                <!-- User name -->
-                <div class="form-floating mb-1 mt-3">
-                    <input type="text" th:field="*{username}" name="username" placeholder="Input Student username (*)"
-                           id="usernameid" class="form-control" required/>
-                    <label class="form-label" for="usernameid">User name: </label>
-                    <div th:if="${#fields.hasErrors('username')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('username')}" th:text="${error}"></li>
-                        </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <form th:action="@{/m-student/add-process}" th:object="${student}" method="post">
+                    <div th:if="${Error}" class="alert alert-danger">
+                        <span th:text="${Error}"></span>
                     </div>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-floating mb-1">
-                    <input type="password" th:field="*{password}" name="password" placeholder="Input Student Password"
-                           id="password" class="form-control" required/>
-                    <label class="form-label" for="password">Password: </label>
-                    <div th:if="${#fields.hasErrors('password')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('password')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- input the correct attribute name of the entity-->
-                <div class="form-floating mb-1">
-                    <input type="text" th:field="*{firstName}" name="firstname" required
-                           placeholder="Input Teacher FirstName" id="firstname" class="form-control"/>
-                    <label class="form-label" for="firstname">First Name: </label>
-                    <div th:if="${#fields.hasErrors('firstName')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('firstName')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-1">
-                    <input type="text" th:field="*{lastName}" name="lastname" placeholder="Input Student LastName"
-                           id="lastname" class="form-control" required/>
-                    <label class="form-label" for="lastname">Last Name: </label>
-                    <div th:if="${#fields.hasErrors('lastName')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('lastName')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-1">
-                    <input type="text" th:field="*{address}" name="lastname" placeholder="Input Student Address"
-                           id="address" class="form-control" required/>
-                    <label class="form-label" for="address">Address: </label>
-                    <div th:if="${#fields.hasErrors('address')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('address')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-1">
-                    <input type="tel" th:field="*{phoneNumber}" name="phoneNumber" placeholder="Input Student Phone"
-                           id="phoneNumber" class="form-control" required/>
-                    <label class="form-label" for="phoneNumber">PhoneNumber: </label>
-                    <div th:if="${#fields.hasErrors('phoneNumber')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('phoneNumber')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="mb-1">
-                    <label class="form-label">Study at school: </label>
-                        <select th:field="*{school}" id="school_select" required>
-                            <option value="">--Select School--</option>
-                            <option th:each="school : ${schoolList}" th:value="${school.id}"
-                                    th:text="${school.name}"></option>
-                        </select>
-                    <div th:if="${#fields.hasErrors('school')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-<!-- Because relation between the entity class and the entity teacher is one to many, a class has many teacher, and opposite
-so that the class must to selected before the teacher
--->
-                <div class="mb-1">
-                    <label class="form-label" for="class_select">Select Class: </label>
-                    <select th:field="*{classes}" id="class_select">
-                        <option value="0">--Select Class--</option>
-                    </select>
-                    <div th:if="${#fields.hasErrors('classes')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('classes')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="mb-1">
-                    <label class="form-label" for="teacher_select">Select Teacher: </label>
-                    <select th:field="*{teacher}" id="teacher_select">
-                        <option value="0">--Select Teacher--</option>
-                    </select>
-                    <div th:if="${#fields.hasErrors('teacher')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('teacher')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-4">
-                    <input type="text" th:field="*{identity}" name="identity" placeholder="Input Student identity"
-                           id="identity" class="form-control" required/>
-                    <label class="form-label" for="identity">Identity: </label>
-                    <div th:if="${#fields.hasErrors('identity')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('identity')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="form-floating mb-1">
-                    <input type="email" th:field="*{email}" placeholder="Input Student Email" name="email" id="email"
-                           class="form-control" required/>
-                    <label class="form-label" for="email">Email: </label>
-                    <div th:if="${#fields.hasErrors('email')}">
-                        <ul>
-                            <li th:each="error: ${#fields.hasErrors('email')}" th:text="${error}"></li>
-                        </ul>
-                    </div>
-                </div>
-                <button class="btn btn-primary py-2" type="submit">Add</button>
-            </form>
+                    <h3>Add Student</h3>
+    <!-- START Fragment/UsernamePassword-->
+                    <div th:replace="~{Fragment/UsernamePassword :: fragmentUsernamePassword}"></div>
+    <!-- END Fragment/UsernamePassword-->
+    <!-- START Fragment/CommonFieldInputUser-->
+                    <div th:replace="~{Fragment/CommonFieldInputUser :: fragmentCommonFieldInput}"></div>
+    <!-- END Fragment/CommonFieldInputUser-->
+    <!-- START Fragment Add - Modify Student-->
+                    <div th:replace="~{Fragment/Student :: fragmentStudentAdd-Modify}"></div>
+    <!-- END Fragment Add - Modify Student-->
+                    <button class="btn btn-primary py-2" type="submit">Add</button>
+                </form>
+            </div>
         </div>
+        <div th:if="${success}" class="alert alert-success">
+            <span th:text="${success}"></span>
+        </div>
+        <div>
+            <a class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Return ListStudent</a>
+        </div>
+        <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
     </div>
-    <div th:if="${success}" class="alert alert-success">
-        <span th:text="${success}"></span>
-    </div>
-    <div>
-        <a class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Return ListStudent</a>
-    </div>
-    <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
-</div>
-<script>
-    document.addEventListener('DOMContentLoaded', function(){
-        const schoolSelect = document.getElementById('school_select');
-        const teacherSelect = document.getElementById('teacher_select');
-        const classSelect = document.getElementById('class_select');
-
-        function getClassBySchoolId(schoolId){
-            if(schoolId){
-                // fetch class
-                fetch(`/m-class/getClassBySchoolId/${schoolId}`)
-                .then(response => response.json())
-                .then(classes =>{
-                    // clear previous classes
-                    classSelect.innerHTML = '<option value="0">--Select Class--</option>';
-
-                    // populate new class
-                    classes.forEach(classItem =>{
-                        const option = document.createElement('option');
-                        option.value = classItem.id;
-                        option.textContent = classItem.name;
-                        classSelect.appendChild(option);
-                    });
-                })
-                .catch(error => console.error('Error fetching Class:', error));
-            } else {
-                // if no school selected
-                classSelect.innerHTML = '<option value="0">--Select Class--</option>';
-            }
-        }
-
-        function getTeacherBySchoolIdAndClassId(schoolId, classId){
-            if(schoolId && classId){
-                // fetch teacher
-                fetch(`/m-teacher/getTeacherBySchoolAndClass/${schoolId}/${classId}`)
-                .then(response => response.json())
-                .then(teachers => {
-                    // clear teacher previous
-                    teacherSelect.innerHTML= '<option>--Select Teacher--</option>';
-
-                    // populate new teacher
-                    teachers.forEach(teacherItem =>{
-                        const option = document.createElement('option');
-                        option.value = teacherItem.id;
-                        option.textContent = `${teacherItem.lastName} ${teacherItem.firstName}`;
-                        teacherSelect.appendChild(option);
-                    });
-                })
-                .catch(error => console.error('Error fetching Teacher:', error));
-            } else {
-                // if no class or school selected
-                teacherSelect.innerHTML= '<option>--Select Teacher--</option>';
-            }
-        }
-
-        // event listener for school selection change
-        schoolSelect.addEventListener('change', function(){
-            const schoolId = schoolSelect.value;
-            getClassBySchoolId(schoolId);
-        });
-
-        // event listener for the school and the class selection change
-        classSelect.addEventListener('change', function(){
-            const schoolId = schoolSelect.value;
-            const classId = classSelect.value;
-            getTeacherBySchoolIdAndClassId(schoolId, classId);
-        });
-    });
-</script>
-<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 </body>
+<script src="/JavaScript/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </html>
