--- a/src/main/resources/Templates/Teacher/modifyFormTeacher.html
+++ b/src/main/resources/Templates/Teacher/modifyFormTeacher.html
@@ -5,114 +5,25 @@
     <title>Modify Teacher</title>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
-    <script src="/JavaScript/function.js"></script>
-    <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-<h1>Modify Teacher</h1>
-<div>
+<div class="container">
+    <h1>Modify Teacher</h1>
     <form th:action="@{/m-teacher/modify-process}" th:object="${teacher}" method="post">
         <div th:if="${Error}" class="alert alert-danger">
             <span th:text="${Error}"></span>
         </div>
-        <div>
-            <label>Teacher Id: <span th:text="*{id}"></span></label>
+        <div class="form-outline mb-1">
+            <label>Teacher Id: <span th:field="*{id}"></span></label>
             <input type="hidden" th:field="*{id}" name="teacherid">
-            <div th:if="${#fields.hasErrors('id')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('id')}" th:text="${error}"></li>
-                </ul>
-            </div>
         </div>
-        <div>
-            <label for="teacherFirstName">Teacher First Name: </label>
-            <input type="text" th:field="*{firstName}" placeholder="Input First Name teacher"
-                   name="teacherFirstName" id="teacherFirstName">
-            <div th:if="${#fields.hasErrors('firstName')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('firstName')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="teacherLastName">Teacher Last Name: </label>
-            <input type="text" th:field="*{lastName}" placeholder="Input Last Name teacher"
-                   name="teacherLastName" id="teacherLastName">
-            <div th:if="${#fields.hasErrors('lastName')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('lastName')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="teacherAddress">Teacher Address: </label>
-            <input type="text" th:field="*{address}" placeholder="Input address teacher"
-                   name="teacherAdress" id="teacherAddress">
-            <div th:if="${#fields.hasErrors('address')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('address')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="teacherPhone">Teacher Phone: </label>
-            <input type="tel" th:field="*{phoneNumber}" placeholder="Input phone teacher"
-                   name="teacherPhone" id="teacherPhone">
-            <div th:if="${#fields.hasErrors('phoneNumber')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('phoneNumber')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="teacherEmail">Teacher Mail: </label>
-            <input type="email" th:field="*{email}" placeholder="Input mail teacher"
-                   name="teacherEmail" id="teacherEmail">
-            <div th:if="${#fields.hasErrors('email')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('email')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="mb-1">
-            <label class="form-label" for="school_select">Work at school: </label>
-            <select id="school_select" th:field="*{school}" required>
-                <option th:value="0">--Select School--</option>
-                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
-            </select>
-            <label th:if="*{school != null}" th:text="*{school.name}"></label>
-            <div th:if="${#fields.hasErrors('school')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="mb-1">
-            <label class="form-label" for="subject_select">Subject Select: </label>
-            <select name="subject" id="subject_select" th:field="*{subject}" required>
-                <option th:value="0">--Select Subject--</option>
-            </select>
-            <label th:if="*{subject != null}" th:text="*{subject.nameSubject}"></label>
-            <div th:if="${#fields.hasErrors('subject')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('subject')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="mb-1">
-            <label class="form-label" for="class_select">Select Class: </label>
-            <select name="classes" id="class_select" th:field="*{classes}" required>
-                <option th:value="0">--Select Class--</option>
-            </select>
-            <label th:if="*{classes != null}" th:text="*{classes.name}"></label>
-            <div th:if="${#fields.hasErrors('classes')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('classes')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
+        <!-- START Fragment/CommonFieldInputUser-->
+        <div th:replace="~{Fragment/CommonFieldInputUser :: fragmentCommonFieldInput}"></div>
+        <!-- END Fragment/CommonFieldInputUser-->
+        <!-- START Fragment Add - Modify Teacher-->
+        <div th:replace="~{Fragment/Teacher :: fragmentTeacherAdd-Modify}"></div>
+        <!-- START Fragment Add - Modify Teacher-->
         <div>
             <button class="btn btn-primary" type="submit">Modify</button>
         </div>
@@ -120,76 +31,14 @@
     <div th:if="${success}">
         <h3>You updated a Teacher "<span th:text="${success}"></span> ",</h3>
     </div>
-</div>
-<div>
-    <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher List Manage</a>
+    <div>
+        <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
+        <a class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher List Manage</a>
+    </div>
 </div>
 </body>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const schoolSelect = document.getElementById('school_select');
-        const subjectSelect = document.getElementById('subject_select');
-        const classSelect = document.getElementById('class_select');
-
-        function loadSubjectsAndClasses(schoolId) {
-            if (schoolId) {
-                fetch(`/m-teacher/getSubjectBySchool/${schoolId}`)
-                    .then(response => response.json())
-                    .then(subjects => {
-                        // clear previous subjects
-                        subjectSelect.innerHTML = '<option value="0">--Select Subject--</option>';
-
-                        // Populate new subjects
-                        subjects.forEach(subject => {
-                            const option = document.createElement('option');
-                            option.value = subject.id;
-                            option.textContent = subject.nameSubject;
-                            subjectSelect.appendChild(option);
-                        });
-                    })
-                    .catch(error => console.error('Error fetching Subject:', error));
-
-                // fetch classes
-                fetch(`/m-teacher/getClassBySchoolId/${schoolId}`)
-                    .then(response => response.json())
-                    .then(classes => {
-                        // clear previous classes
-                        classSelect.innerHTML = '<option value="0">--Select Class--</option>';
-
-                        // Populate new class
-                        classes.forEach(classItem => {
-                            const option = document.createElement('option');
-                            option.value = classItem.id;
-                            option.textContent = classItem.name;
-                            classSelect.appendChild(option);
-                        });
-                    })
-                    .catch(error => console.error('Error fetching Class:', error));
-            } else {
-                // Clear subjects and classes if no school is selected
-                subjectSelect.innerHTML = '<option value="0">--Select Subject--</option>';
-                classSelect.innerHTML = '<option value="0">--Select Class--</option>';
-            }
-        }
-
-        // Event listener for school selection change
-        schoolSelect.addEventListener('change', function() {
-            const schoolId = schoolSelect.value;
-            loadSubjectsAndClasses(schoolId);
-        });
-
-        // Automatically load subjects and classes if school is already selected
-        const initialSchoolId = schoolSelect.value;
-        if (initialSchoolId) {
-            loadSubjectsAndClasses(initialSchoolId);
-        }
-    });
-</script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+<script src="/JavaScript/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </html>
