--- a/src/main/resources/Templates/User/modifyFormUser.html
+++ b/src/main/resources/Templates/User/modifyFormUser.html
@@ -17,74 +17,12 @@
             <span th:text="${Error}"></span>
         </div>
         <div>
-            <label th:field="*{id}">User Id: </label>
+            <label class="form-label">User Id: <span th:text="*{id}"></span></label>
             <input type="hidden" th:field="*{id}" name="userid">
-            <div th:if="${#fields.hasErrors('id')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('id')}" th:text="${error}"></li>
-                </ul>
-            </div>
         </div>
-        <div>
-            <label for="userFirstName">User First Name: </label>
-            <input type="text" th:field="*{firstName}" placeholder="Input First Name User"
-                   name="userFirstName" id="userFirstName">
-            <div th:if="${#fields.hasErrors('firstName')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('firstName')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="userLastName">User Last Name: </label>
-            <input type="text" th:field="*{lastName}" placeholder="Input Last Name User"
-                   name="userLastName" id="userLastName">
-            <div th:if="${#fields.hasErrors('lastName')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('lastName')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="userAddress">User Address: </label>
-            <input type="text" th:field="*{address}" placeholder="Input address user"
-                   name="userAddress" id="userAddress">
-            <div th:if="${#fields.hasErrors('address')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('address')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="userPhone">User Phone: </label>
-            <input type="tel" th:field="*{phoneNumber}" placeholder="Input phone user"
-                   name="userPhone" id="userPhone">
-            <div th:if="${#fields.hasErrors('phoneNumber')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('phoneNumber')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="userIdentity">User Identity: </label>
-            <input type="tel" th:field="*{identity}" placeholder="Input Identity user"
-                   name="userIdentity" id="userIdentity">
-            <div th:if="${#fields.hasErrors('identity')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('identity')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label for="userMail">User Mail: </label>
-            <input type="email" th:field="*{email}" placeholder="Input mail user"
-                   name="userMail" id="userMail">
-            <div th:if="${#fields.hasErrors('email')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('email')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
+        <!-- START Fragment/CommonFieldInputUser-->
+        <div th:replace="~{Fragment/CommonFieldInputUser :: fragmentCommonFieldInput}"></div>
+        <!-- END Fragment/CommonFieldInputUser-->
         <div>
             <button class="btn btn-primary" type="submit">Modify</button>
         </div>
